--- a/clusters/minikube/autoscaler-helmrelease.yaml
+++ b/clusters/minikube/autoscaler-helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   releaseName: clusterautoscaleraddon
   chart:
     spec:
-      chart: auto-scaler
+      chart: cluster-autoscaler
       version: 9.10.3
       sourceRef:
         kind: HelmRepository
