--- a/clusters/minikube/external-dns-release.yaml
+++ b/clusters/minikube/external-dns-release.yaml
@@ -2,12 +2,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: my-release
+  name: external-dns
   namespace: default
 spec:
   chart:
     spec:
-      chart: wildfly
+      chart: external-dns
       sourceRef:
         kind: HelmRepository
         name: bitnami
